--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="content">
             <div class="container">
                 <div class="content__row">
-                    <div class="content__logo"><img src="../img/content_logo.png" alt=""></div>
+                    <div class="content__logo"><img src="/img/content_logo.png" alt=""></div>
                     <div class="content__title">A NEW GENERATION OF VINTAGE BIKE</div>
                     <div class="content__text">Lorem Ipsum is simply dummy text of the printing and typesetting
                         industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
